modified dockerfile